# flutter_minizip_ng

./: .metadata  LICENSE  NOTICE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/catoocraft/flutter_minizip_ng_example/: MainActivity.kt
example/assets/: normal_text.txt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: flutter_minizip_ng.podspec
lib/: flutter_minizip_ng.dart
lib/src/: bindings_generated.dart  common.dart  reader.dart  writer.dart
macos/: flutter_minizip_ng.podspec
macos/Classes/: flutter_minizip_ng.c
src/: CMakeLists.txt  flutter_minizip_ng.c  flutter_minizip_ng.h
